--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 					<li class=" tsd-kind-class">
 						<a href="classes/openrpcdocumentvalidationerror.html" class="tsd-kind-icon">OpenRPCDocument<wbr>Validation<wbr>Error</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/parametervalidationerror.html" class="tsd-kind-icon">Parameter<wbr>Validation<wbr>Error</a>
+					</li>
 					<li class=" tsd-kind-function">
 						<a href="globals.html#generatemethodparamid" class="tsd-kind-icon">generate<wbr>Method<wbr>Param<wbr>Id</a>
 					</li>
