--- a/classes/methodcallvalidator.html
+++ b/classes/methodcallvalidator.html
@@ -112,7 +112,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/open-rpc/schema-utils-js/blob/044bdea/src/method-call-validator/method-call-validator.ts#L13">src/method-call-validator/method-call-validator.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/open-rpc/schema-utils-js/blob/ae0f48e/src/method-call-validator/method-call-validator.ts#L14">src/method-call-validator/method-call-validator.ts:14</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -147,13 +147,13 @@
 					<a name="validate" class="tsd-anchor"></a>
 					<h3>validate</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">validate<span class="tsd-signature-symbol">(</span>methodName<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, params<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="methodcallparametervalidationerror.html" class="tsd-signature-type">MethodCallParameterValidationError</a><span class="tsd-signature-symbol">[]</span></li>
+						<li class="tsd-signature tsd-kind-icon">validate<span class="tsd-signature-symbol">(</span>methodName<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, params<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">MethodCallParameterValidationError</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">MethodCallMethodNotFoundError</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/open-rpc/schema-utils-js/blob/044bdea/src/method-call-validator/method-call-validator.ts#L60">src/method-call-validator/method-call-validator.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/open-rpc/schema-utils-js/blob/ae0f48e/src/method-call-validator/method-call-validator.ts#L62">src/method-call-validator/method-call-validator.ts:62</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -185,8 +185,12 @@
 									</div>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="methodcallparametervalidationerror.html" class="tsd-signature-type">MethodCallParameterValidationError</a><span class="tsd-signature-symbol">[]</span></h4>
-							<p>an array of parameter validation errors, or if there are none, an empty array.</p>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">MethodCallParameterValidationError</span><span class="tsd-signature-symbol">[]</span>
+								<span class="tsd-signature-symbol"> | </span>
+								<span class="tsd-signature-type">MethodCallMethodNotFoundError</span>
+							</h4>
+							<p>an array of parameter validation errors, or if there are none, an empty array.
+							if the method name is invalid, a [[MethodCallMethodNotFoundError]] is returned.</p>
 						</li>
 					</ul>
 				</section>
