--- a/interfaces/infoobject.html
+++ b/interfaces/infoobject.html
@@ -108,57 +108,57 @@
 					<div class="tsd-signature tsd-kind-icon">contact<span class="tsd-signature-symbol">:</span> <a href="contactobject.html" class="tsd-signature-type">ContactObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:108</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:58</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#infodescription" class="tsd-signature-type">InfoDescription</a></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:105</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:55</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="license" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> license</h3>
-					<div class="tsd-signature tsd-kind-icon">license<span class="tsd-signature-symbol">:</span> <a href="licenceobject.html" class="tsd-signature-type">LicenceObject</a></div>
+					<div class="tsd-signature tsd-kind-icon">license<span class="tsd-signature-symbol">:</span> <a href="licenseobject.html" class="tsd-signature-type">LicenseObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:109</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:59</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="termsofservice" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> terms<wbr>OfService</h3>
-					<div class="tsd-signature tsd-kind-icon">terms<wbr>OfService<span class="tsd-signature-symbol">:</span> <a href="../globals.html#infotermsofservice" class="tsd-signature-type">InfoTermsOfService</a></div>
+					<div class="tsd-signature tsd-kind-icon">terms<wbr>OfService<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:106</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:56</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="title" class="tsd-anchor"></a>
 					<h3>title</h3>
-					<div class="tsd-signature tsd-kind-icon">title<span class="tsd-signature-symbol">:</span> <a href="../globals.html#infotitle" class="tsd-signature-type">InfoTitle</a></div>
+					<div class="tsd-signature tsd-kind-icon">title<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:104</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:54</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="version" class="tsd-anchor"></a>
 					<h3>version</h3>
-					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <a href="../globals.html#infoversion" class="tsd-signature-type">InfoVersion</a></div>
+					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:107</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:57</li>
 						</ul>
 					</aside>
 				</section>
