--- a/interfaces/methodobject.html
+++ b/interfaces/methodobject.html
@@ -109,100 +109,125 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methoddescription" class="tsd-signature-type">MethodDescription</a></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:162</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:116</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>A verbose explanation of the method behavior. GitHub Flavored Markdown syntax MAY be used for rich text representation.</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="errors" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> errors</h3>
-					<div class="tsd-signature tsd-kind-icon">errors<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methoderrors" class="tsd-signature-type">MethodErrors</a></div>
+					<div class="tsd-signature tsd-kind-icon">errors<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a><span class="tsd-signature-symbol"> | </span><a href="errorobject.html" class="tsd-signature-type">ErrorObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:168</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:131</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Defines an application level error.</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="examples" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> examples</h3>
-					<div class="tsd-signature tsd-kind-icon">examples<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methodexamples" class="tsd-signature-type">MethodExamples</a></div>
+					<div class="tsd-signature tsd-kind-icon">examples<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a><span class="tsd-signature-symbol"> | </span><a href="examplepairingobject.html" class="tsd-signature-type">ExamplePairingObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:170</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:133</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="links" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> links</h3>
-					<div class="tsd-signature tsd-kind-icon">links<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methodlinks" class="tsd-signature-type">MethodLinks</a></div>
+					<div class="tsd-signature tsd-kind-icon">links<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a><span class="tsd-signature-symbol"> | </span><a href="linkobject.html" class="tsd-signature-type">LinkObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:169</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:132</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methodname" class="tsd-signature-type">MethodName</a></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:161</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:112</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The cannonical name for the method. The name MUST be unique within the methods array.</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="paramstructure" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> param<wbr>Structure</h3>
-					<div class="tsd-signature tsd-kind-icon">param<wbr>Structure<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methodparamstructure" class="tsd-signature-type">MethodParamStructure</a></div>
+					<div class="tsd-signature tsd-kind-icon">param<wbr>Structure<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"by-position"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"by-name"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:165</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:125</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Format the server expects the params. Defaults to &#39;by-positon&#39;.</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="params" class="tsd-anchor"></a>
 					<h3>params</h3>
-					<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methodparams" class="tsd-signature-type">MethodParams</a></div>
+					<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a><span class="tsd-signature-symbol"> | </span><a href="contentdescriptorobject.html" class="tsd-signature-type">ContentDescriptorObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:166</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:126</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="result" class="tsd-anchor"></a>
 					<h3>result</h3>
-					<div class="tsd-signature tsd-kind-icon">result<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methodresult" class="tsd-signature-type">MethodResult</a></div>
+					<div class="tsd-signature tsd-kind-icon">result<span class="tsd-signature-symbol">:</span> <a href="contentdescriptorobject.html" class="tsd-signature-type">ContentDescriptorObject</a><span class="tsd-signature-symbol"> | </span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:167</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:127</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="summary" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> summary</h3>
-					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methodsummary" class="tsd-signature-type">MethodSummary</a></div>
+					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:163</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:120</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>A short summary of what the method does.</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="tags" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> tags</h3>
-					<div class="tsd-signature tsd-kind-icon">tags<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methodtags" class="tsd-signature-type">MethodTags</a></div>
+					<div class="tsd-signature tsd-kind-icon">tags<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="tagobject.html" class="tsd-signature-type">TagObject</a><span class="tsd-signature-symbol"> | </span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:164</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:121</li>
 						</ul>
 					</aside>
 				</section>
