--- a/interfaces/schema.html
+++ b/interfaces/schema.html
@@ -67,7 +67,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>This interface was referenced by <code>Schemas</code>&#39;s JSON-Schema definition
+						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
 						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
 					</div>
 				</div>
@@ -85,7 +85,7 @@
 				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>This interface was referenced by <code>Schemas</code>&#39;s JSON-Schema definition
+						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
 						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
 					</div>
 				</div>
